<resources>
    <string name="app_name">AndroidAppSexed</string>

    <string name="splash_screen_info">"© 2023 "</string>
    <string name="progressdialog_title">Porfavor Espere...</string>
    <string name="progressdialog_message">Cargando...</string>
    <string name="add_as_favorite">Agregar</string>
    <string name="drawer_menu_favorites">ChatBot</string>
    <string name="open_drawer">Abrir Navegador drawer</string>
    <string name="close_drawer">Cerrar Navegador drawer</string>
    <string name="nuevo_usuario">Nuevo usuario?</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="prompt_email">Email</string>
    <string name="Nombre">Name</string>
    <string name="Apellido">Name</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="enviar">Enviar</string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="chatbot">ChatBot</string>

</resources>