<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context="com.sexed.androidapp.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:drawableStart="@android:drawable/sym_action_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"

        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:text="@string/login"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/contrase_a"
        android:imeActionLabel=""
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="20dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="VisualLintTextFieldSize" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"

        android:visibility="invisible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/login" />

    <LinearLayout
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading">

        <View
            android:layout_width="160dp"
            android:layout_height="2dp"
            android:background="@android:color/black" />
        <View
            android:layout_width="160dp"
            android:layout_height="2dp"
            android:background="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="24dp"
        android:text="@string/nuevo_usuario"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintLeft_toRightOf="@+id/lines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lines" />

    <TextView
        android:id="@+id/createAcc"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"

        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/crear_una_cuenta"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/text_n"
        app:layout_constraintTop_toBottomOf="@+id/lines"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>